styles.css
html {
  font-family: "Verdana";
  --extrasMaxHeight: 64px; /* extras are the logo wrapper as well as the navbar */
  --extrasHeight: 7.2%;
  --extrasMinHeight: 50px;
  --lightBlue: #A3D0E4;
  --greyWhite: #FBFBFB;
  --greyWhiteActive: #F8F8F8;
  --activeNavbar: #9DC9DC; /* color for navbar items on :active */
  --liBorderSize: 2px; /* to make adjustment of nav > ul > li item borders easier */
  color: #2E2E2E; /* universal font color, not quite black to reduce eyestrain */
}

html, body {
  min-height: 100%;
  min-height: 100vh;
  min-height: -webkit-fill-available;
}

.noselect { /* To remove accidental text selecting of navbuttons */
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Old versions of Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome, Edge, Opera and Firefox */
}

body {
  padding: 0px;
  display: flex;
  flex-direction: row;
  min-width: 100vw;
  height: 100%;
  margin: 0px;
  flex-wrap: wrap;
  overflow: scroll;
  background-color: var(--greyWhite);
}

nav {
    display: flex;
    align-items: end;
    margin: 0px;
    position: -webkit-fixed;
    position: fixed;
    bottom: 0px;
    padding: 0px;
    width: 100%;
    min-height: var(--extrasMinHeight);
    border-top: var(--lightBlue) 1px solid;
    background-color: var(--greyWhite);;
    box-shadow: 0px -0.8px 3px rgba(0, 0, 0, 0.25);
    transition: bottom 0.2s;
}

nav:hover {
  cursor: default;
}

#logo {
  flex-shrink: 0;
  flex-grow: 0;
  height: 20px;
  width: 20px;
}

.logoWrapper {
  flex-grow: 0;
  display: block;
  min-height: calc(var(--extrasMinHeight) + 20px);
  height: var(--extrasHeight);
  max-height: calc(var(--extrasMaxHeight) + 20px);
  width: 100%;
  background-color: var(--lightBlue);
}

a {
  color: black;
  text-decoration: none;
}

ul {
  list-style-type: none;
  padding: 0px;
  width: 100%;
  font-size: 15px;
}

.navButtons {
  display: flex;
  margin: 0px;
  justify-content: space-around;
}

.bodyWrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 100%;
}

.bodyInnerWrapper {
  padding-left: 5vw;
  padding-right: 5vw;
  height: 100%;
}

.vid, .images, .more {
  width: 100%;
  min-height: 33.33333%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: start;
}

.presItem {
  min-width: 280px;
  height: auto;
  max-width: 75%;
}

.images {
  align-items: end;
  text-align: right;
}

.footer {
  height: 7.2vh;
  max-height: var(--extrasMaxHeight);
  width: 100%;
  background-color: var(--lightBlue);
  display: flex;
  align-items: center;
  justify-content: center;
}

li {
  width: 100%;
  height: 100%;
  padding: 5px;
  padding-top: 10px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-shadow: 0.2px 0.2px 0.2px rgba(0, 0, 0, 0.25);
  border-left: solid var(--greyWhite) var(--liBorderSize);            /* invisible border because otherwise :hover moves the content of li*/
  border-right:  solid var(--greyWhite) var(--liBorderSize);*/
}

li:hover {
  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0);
  cursor: pointer;
  text-shadow: -0.2px -0.2px 0.2px rgba(0, 0, 0, 0.25);
  border-left: solid var(--lightBlue) var(--liBorderSize);
  border-right: solid var(--lightBlue) var(--liBorderSize);
  background-color: var(--lightBlue);
  transition: background-color 0.2s ease-out, border-left 0.2s ease-out, border-right  0.2s ease-out;
}

li:active {
  background-color: var(--activeNavbar);
  transition: background-color 0.08s ease-out;
}

.lightBlue {
  background-color: var(--lightBlue);
  border-left: solid var(--lightBlue) var(--liBorderSize);
  border-right: solid var(--lightBlue) var(--liBorderSize);
}

.icon {
  padding-left: 0px;
  padding-right: 0px;
  width: 2em;
  max-width: 35px;
  height: auto;
  filter: drop-shadow(1px 1px 0.5px rgba(0, 0, 0, 0.25));
}

@media screen and (max-width: 387px)
      ul {
      font-size: 13px;
    }

}

@media screen and (min-width: 500px) { /* From this width on, presItem alignment is starting to look weird */
  .presItem {

    }

}

@media screen and (min-width: 900px), screen and (min-height: 900px) {
    nav {
      max-height: var(--extrasMaxHeight);
    }
}

@media screen and (min-width: 1280px) { /* ~Desktop border https://gs.statcounter.com/screen-resolution-stats/desktop/worldwide */
    .bodyInnerWrapper {
      max-width: none;
      border-top: var(--lightBlue) solid 1.5px;
      box-shadow: inset 0px 0.8px 3px rgba(0, 0, 0, 0.25);
      display: flex;
      flex-direction: row;
      justify-content: center;
    }

    .logoWrapper {
      order: 0;
      width: 40%;
      background-color: var(--greyWhite);
    }

    nav {
      order: 1;
      position: inherit;
      width: 60%;
      border-top: none;
      box-shadow: none;
      min-height: calc(var(--extrasMinHeight) + 20px);
      height: var(--extrasHeight);
      max-height: calc(var(--extrasMaxHeight) + 20px);
      align-items: center;
    }

    #navigation img {
      display: none;
    }

    .bodyWrapper {
      order: 2;
    }

    .footer {
      order: 3;
    }

    .navButtons {
      font-size: inherit;
    }

    li {
      padding: 0;
      min-height: calc(var(--extrasMinHeight) + 20px);
      height: var(--extrasHeight);
      max-height: calc(var(--extrasMaxHeight) + 20px);
    }

    .presWrapper {
      display: none;
    }

    .presWrapper.active {
      display: flex;
      align-items: center;
      max-width: 80%;
      padding: 0px;
    }

    .presItem {
      width: 100%;
      max-width: none;
    }

    .presWrapper > p {
      max-width: 70%;
      align-self: start;
    }

    h3 {
      align-self: start;
    }
}

